--- a/HTML/FlexBox/index.html
+++ b/HTML/FlexBox/index.html
@@ -20,7 +20,7 @@
             row-gap: 16px; /*colocar espaço entre as linhas */
             column-gap: 16px; /*coloca espaço entre colunas */
         }
-        /*esse comando abaixo para remover todas as margens: */
+        /*esse comando abaixo para remover todas as margens automáticas: */
         *{
             margin: 0;
         }
