--- a/HTML/Transportadora/index.html
+++ b/HTML/Transportadora/index.html
@@ -71,16 +71,15 @@
         <section class="sectionMain">
             <article>
                 <h1>
-                    <span class="material-symbols-outlined">local_shipping</span>Caminhões
+                    <span class="material-symbols-outlined">flight</span>Aviões
                 </h1>
                 <p>
-                    Contamos com uma frota de Caminhões modernos (VUC, TOCO, TRUCK, Cavalo
-                    Mecânico e Cavalo Mecânico Trucado, Carretas de 2 e 3 eixos e Bitrem
-                    aberto e fechado)
+                    Está com urgência? não se preocupe! Despachamos todos os dias 5 aeronaves para cada região do
+                    Brasil. Ao todo contamos com 5 aeronaves modernas.
                 </p>
             </article>
             <footer> <!--rodapé da sessão-->
-                <a href="#" class="botao saiba_mais_caminhoes">
+                <a href="#" class="botao saiba_mais_avioes">
                     Saiba mais >>
                     <!--o # substituímos pelo link que clicando no 'saiba mais' nos direcione para alum lugar-->
                 </a>
@@ -89,16 +88,16 @@
         <section class="sectionMain">
             <article>
                 <h1>
-                    <span class="material-symbols-outlined">local_shipping</span>Caminhões
+                    <span class="material-symbols-outlined">add_location</span>Rastreamento
                 </h1>
                 <p>
-                    Contamos com uma frota de Caminhões modernos (VUC, TOCO, TRUCK, Cavalo
-                    Mecânico e Cavalo Mecânico Trucado, Carretas de 2 e 3 eixos e Bitrem
-                    aberto e fechado)
+                    Todas as mercadorias são marcadas com um código de barras, assim
+                    você tem total controle. Já identificamos a mercadoria na entrada,
+                    assim você acompanha desde o início a hora da entrega.
                 </p>
             </article>
             <footer> <!--rodapé da sessão-->
-                <a href="#" class="botao saiba_mais_caminhoes">
+                <a href="#" class="botao saiba_mais_rastreamento">
                     Saiba mais >>
                     <!--o # substituímos pelo link que clicando no 'saiba mais' nos direcione para alum lugar-->
                 </a>
@@ -107,22 +106,50 @@
         <section class="sectionMain">
             <article>
                 <h1>
-                    <span class="material-symbols-outlined">local_shipping</span>Caminhões
+                    <span class="material-symbols-outlined">smartphone</span>Smartphone
                 </h1>
                 <p>
-                    Contamos com uma frota de Caminhões modernos (VUC, TOCO, TRUCK, Cavalo
-                    Mecânico e Cavalo Mecânico Trucado, Carretas de 2 e 3 eixos e Bitrem
-                    aberto e fechado)
+                    Baixe o aplicativo e visualize onde sua mercadoria está em tempo
+                    real. Disponível para Windows Phone, Android e Iphone.
                 </p>
             </article>
             <footer> <!--rodapé da sessão-->
-                <a href="#" class="botao saiba_mais_caminhoes">
+                <a href="#" class="botao saiba_mais_smartphone">
                     Saiba mais >>
                     <!--o # substituímos pelo link que clicando no 'saiba mais' nos direcione para alum lugar-->
                 </a>
             </footer>
         </section>
     </main>
+    <section id="sectionCliente">
+        <h1>Conheça alguns de nossos clientes</h1>
+        <div id="conteudoCliente">
+            <article>
+                <figure>
+                    <img src="mulher_feliz.png" alt="Cliente satisfeito">
+                    <caption>
+                        Texto do cliente
+                    </caption>
+                </figure>
+            </article>
+            <article>
+                <figure>
+                    <img src="feliz.png" alt="Cliente satisfeito">
+                    <caption>
+                        Texto do cliente
+                    </caption>
+                </figure>
+            </article>
+            <article>
+                <figure>
+                    <img src="homem_feliz.png" alt="Cliente satisfeito">
+                    <caption>
+                        Texto do cliente
+                    </caption>
+                </figure>
+            </article>
+        </div>
+    </section>
     <!-- fim conteudo -->
 </body>
 </html>
